--- a/ai-stuff/continue/config.json
+++ b/ai-stuff/continue/config.json
@@ -7,18 +7,13 @@
       "apiKey": "aFJAAt0XckRMkVMeeAzIioEKacFBRSSe"
     },
     {
-      "title": "Llama 3",
+      "title": "ollama - llama 3",
       "provider": "ollama",
       "model": "llama3"
     },
     {
-      "title": "Ollama",
-      "provider": "ollama",
-      "model": "AUTODETECT"
-    },
-    {
       "title": "Gemini 1.5 Pro",
-      "model": "gemini-1.5-pro-latest",
+      "model": "gemini-pro",
       "contextLength": 1000000,
       "apiKey": "<API_KEY>",
       "provider": "free-trial"
@@ -70,7 +65,7 @@
     {
       "name": "conventional-commit",
       "description": "Create a custom git commit message based on the provided git diff output and flags",
-      "prompt": "The expected input format is command line output from git diff that compares all the changes of the current branch with the main repository branch, followed by two optional flags. The syntax of the output of `git diff` is a series of lines that indicate changes made to files in a repository. Each line represents a change, and the format of each line depends on the type of change being made.\n\n### Steps:\n- Read the input and figure out what the major changes and upgrades were that happened.\n- Create the git commands needed to add the changes to the repo, and a git commit to reflect the changes\n- If there are a lot of changes include more bullets. If there are only a few changes, be more terse. Use the provided flags to determine how much detail to include in the commit message.\n\n### Output Instructions:\n- Use conventional commits - i.e. prefix the commit title with \"chore:\" (if it's a minor change like refactoring or linting), \"feat:\" (if it's a new feature), \"fix:\" if its a bug fix\n- Types other than feat and fix are allowed: build, chore, ci, docs, style, test, perf, refactor, and others.\n- Only use lowercase letters in the title, body, and the footer of the commit message.\n- Keep the commit message title under 60 characters.\n- Use present tense in both the title and body of the commit.\n- You can create multiple commits if there are too many unrelated changes in a single diff. Each commit can have a multi-paragraph body.\n- Ensure that each file change is appropriately added and committed with its respective message.\n- You only output human readable Markdown, except for the links, which should be in HTML format.\n- The output should only be the shell commands needed to update git.\n- Do not place the output in a code block.\n\n### Example Template:\nFor the current changes, replace `<file_name>` with `file_a`, `file_b`, `<commit_message>` with `fix: prevent racing of requests`, `<commit_body>` with the multi-paragraph body, `<reviewer>` with `Z`, and `<refs>` with `#123`:\n\ngit add file_a file_b\ngit commit -m \"fix: prevent racing of requests\" -m \"introduce a request id and a reference to latest request. dismiss incoming responses other than from latest request.\" -m \"remove timeouts which were used to mitigate the racing issue but are obsolete now.\" -m \"reviewed-by: Z\" -m \"refs: #123\"\n\nRepeat the above steps for the next set of changes.\n\n### Example Commit Message:\n```text\nfix: prevent racing of requests\n\nIntroduce a request id and a reference to latest request. Dismiss\nincoming responses other than from latest request.\n\nRemove timeouts which were used to mitigate the racing issue but are\nobsolete now.\n\nReviewed-by: Z\nRefs: #123\n```\n\nInput: {{{ input }}}"
+      "prompt": "The expected input format is command line output from git diff that compares all the changes of the current branch with the main repository branch, followed by two optional flags. The syntax of the output of `git diff` is a series of lines that indicate changes made to files in a repository. Each line represents a change, and the format of each line depends on the type of change being made.\n\n### Steps:\n- Read the input and figure out what the major changes and upgrades were that happened.\n- Create the git commands needed to add the changes to the repo, and a git commit to reflect the changes\n- If there are a lot of changes include more bullets. If there are only a few changes, be more terse. Use the provided flags to determine how much detail to include in the commit message.\n\n### Output Instructions:\n- Use conventional commits - i.e. prefix the commit title with \"chore:\" (if it's a minor change like refactoring or linting), \"feat:\" (if it's a new feature), \"fix:\" if its a bug fix\n- Types other than feat and fix are allowed. build, chore, ci, docs, style, test, perf, refactor, and others.\n- Only use lowercase letters in the the title, body and the footer of the commit message.\n- Keep the commit message title under 60 characters.\n- Use present tense in both the title and body of the commit.\n- You only output human readable Markdown, except for the links, which should be in HTML format.\n- The output should only be the shell commands needed to update git.\n- Do not place the output in a code block\n\n### Example Template:\nFor the current changes, replace `<file_name>` with `temp.py`, `<commit_message>` with `add --newswitch switch to temp.py to do newswitch behavior` and `<resolved_issues>` in the input message with `10`:\n\ngit add temp.py\ngit commit -m \"add --newswitch switch to temp.py to do newswitch behavior\" -m \"this commit adds a new switch to the temp.py file to allow for the newswitch behavior to be implemented.\" -m \"resolves #10, resolves #11\"\n\nInput: {{{ input }}}"
     },
     {
       "name": "create-issue",
@@ -100,3 +95,4 @@
     "provider": "transformers.js"
   }
 }
+
