feat: add cursor rules and workflow templates
Changes made in this commit:
- Added files:
  - .cursor/rules/*.mdc (core rule templates)
  - bin/apply-rules.sh (automation script)
  - docs/workflow-rules.md (documentation)
  - xnotes/* (workflow templates)
- Modified files:
  - .cursorignore (added xnotes)
  - .gitignore (added private rules)
  - .path (added DOTFILES_DIR)

Key changes:
- Implemented standardized cursor rule format
- Added agile workflow templates and documentation
- Created automation script for rule deployment
- Added documentation standards for PRD, architecture, and stories
- Integrated memory bank system for AI interactions

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ vscode-settings.json
 !.vim_runtime/temp_dirs/undodir/.gitkeep
 *.DS_Store
 .vscode
+
+# Private individual user cursor rules
+.cursor/rules/_*.mdc
