--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,10 +6,7 @@
         "bump-minor-pre-major": false,
         "bump-patch-for-minor-pre-major": false,
         "draft": false,
-        "prerelease": false,
-        "latest-tag-sha": "112ccb5f51f76e34f6a26c35790b80fd1dc7fb4a",
-        "latest-tag-name": "v3.6.0",
-        "release-notes-generator": "v3.7.0"
+        "prerelease": false
       }
     },
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
